# blink

./: .dockerignore  .gitignore  AGENTS.md  AI_DEBUGGING_FRICTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  Dockerfile.airlock  ERROR_CATALOG.md  FRICTION.md  GAPS.md  GETTING_STARTED.md  OPEN_QUESTIONS.md  README.md  SPEC.md  TAGLINES.md  Taskfile.yml  llms-full.md  llms-full.txt  llms.md  llms.txt  pact  pyproject.toml  tmp_bootstrap.sh
.claude/: settings.json
benchmarks/: arena_process_batch.bl
bootstrap/: bootstrap.sh  pactc_bootstrap.c  runtime.h  runtime_core.h  runtime_process.h  runtime_sqlite.h  runtime_stdio.h  runtime_tcp.h  runtime_test.h  runtime_thread.h  runtime_trace.h  runtime_unix_socket.h
decisions/: ai-first-review-pass.md  arena-expression-form-semantics.md  arena-nested-closure-capture-promotion.md  capture-log-test-instrumentation.md  closure-capture-semantics.md  codegen-backend-bootstrap.md  compile-time-intrinsics.md  compiler-type-representation.md  const-evaluation.md  db-module-design.md  display-format-protocol.md  env-effect-api.md  error-catalog.md  ffi-struct-construction.md  ffi-type-mapping.md  handler-type-system.md  http-client-effect-mapping.md  http-server-routing-model.md  i-annotation.md  if-else-expressions.md  import-compilation-model.md  import-resolution.md  inline-module-blocks.md  inline-string-escape.md  ir-multi-backend.md  json-codec-design.md  keyword-arguments-defaults.md  language-evolution.md  logo-direction.md  machine-output-format.md  memory-management-gc.md  method-resolution.md  (+26 more)
(+504 files in other folders)
