[project]
name = "pact"
version = "0.1.0"
description = "A minimal Pact language interpreter"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pact = "pact.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legacy/py_bootstrap/pact"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
